@@ -8902,8 +8902,8 @@ void define_md_data_raw()
          "calculations can only be performed by analytic expressions.\n"
          "\n"
          "The magnetic field components are retrieved separately, and,\n"
-         "hence, the argument *component* can be  \"u\", \"v\", \"w\"\n"
-         "\"strength\", \"eta\" and \"theta\".\n"
+         "hence, the argument *component* can be  \"u\", \"v\", \"w\",\n"
+         "and \"strength\".\n"
          "\n"
          "The number of elements added to the state vector (*x*) is:\n"
          "   n_g1 * n_g2 * n_g3\n"
